# PhD

./: .gitignore  CODING_STANDARDS.md  CONTRIBUTING.md  README.md  pyproject.toml
bastiastro/: __init__.py  astronomy.py  core.py  highdim.py  plotting.py
ipynb/: tools.py  tools_highdim.py  tools_matplotlib.py
tools/: core.py  plotting.py
