[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bastiastro"
version = "0.1.0"
description = "Basti's astronomy research environment bootstrap - tools and utilities for streamlined data analysis"
authors = [
    {name = "Sebastian Schindler", email = "sebastian.schindler@fau.de"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy",
    "pandas", 
    "matplotlib",
    "astropy",
    "astroquery",
    "seaborn",
    "scikit-learn",
]

[project.optional-dependencies]
highdim = [
    "hdbscan",
    "corner",
    "plotly", 
    "awkward",
    "h5py",
]
dev = [
    "pytest",
    "black",
    "flake8",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
exclude = ["tests*"]
